updated alts on clients images, changed directory paths to see if it fixes image issues on github pages

--- a/index.html
+++ b/index.html
@@ -512,42 +512,42 @@
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/PPC_logo.webp" type="image/webp" />
-                  <source srcset="/assets/images/6.partners/PPC_logo.jpg" type="image/jpg" />
-                  <img src="/assets/images/6.partners/PPC_logo.jpg" alt="PPC Logo" />
+                  <source srcset="assets/images/6.partners/PPC_logo.webp" type="image/webp" />
+                  <source srcset="assets/images/6.partners/PPC_logo.jpg" type="image/jpg" />
+                  <img src="assets/images/6.partners/PPC_logo.jpg" alt="PPC Logo" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/princess-royal-training.png" type="image/jpg" />
-                  <img src="/assets/images/6.partners/princess-royal-training.png" alt="Princess Royal Training" />
+                  <source srcset="assets/images/6.partners/princess-royal-training.png" type="image/jpg" />
+                  <img src="assets/images/6.partners/princess-royal-training.png" alt="Princess Royal Training" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/qms.webp" type="image/webp" />
-                  <source srcset="/assets/images/6.partners/qms.png" type="image/jpg" />
-                  <img src="/assets/images/6.partners/qms.png" alt="QMS" />
+                  <source srcset="assets/images/6.partners/qms.webp" type="image/webp" />
+                  <source srcset="assets/images/6.partners/qms.png" type="image/jpg" />
+                  <img src="assets/images/6.partners/qms.png" alt="QMS" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/iso_27001.png" type="image/jpg" />
-                  <img src="/assets/images/6.partners/iso_27001.png" alt="ISO 27001" />
+                  <source srcset="assets/images/6.partners/iso_27001.png" type="image/jpg" />
+                  <img src="assets/images/6.partners/iso_27001.png" alt="ISO 27001" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/skills-of-tomorrow.jpg" type="image/jpg" />
-                  <img src="/assets/images/6.partners/skills-of-tomorrow.jpg" alt="Skills Of tomorrow" />
+                  <source srcset="assets/images/6.partners/skills-of-tomorrow.jpg" type="image/jpg" />
+                  <img src="assets/images/6.partners/skills-of-tomorrow.jpg" alt="Skills Of tomorrow" />
                 </picture>
               </div>
             </div>
@@ -562,33 +562,33 @@
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/google-partner.webp" type="image/webp" />
-                  <source srcset="/assets/images/6.partners/google-partner.jpg" type="image/jpg" />
-                  <img src="/assets/images/6.partners/google-partner.jpg" alt="Google Partners" />
+                  <source srcset="assets/images/6.partners/google-partner.webp" type="image/webp" />
+                  <source srcset="assets/images/6.partners/google-partner.jpg" type="image/jpg" />
+                  <img src="assets/images/6.partners/google-partner.jpg" alt="Google Partners" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/living_wage.png" type="image/png" />
-                  <img src="/assets/images/6.partners/living_wage.png" alt="Living Wage" />
+                  <source srcset="assets/images/6.partners/living_wage.png" type="image/png" />
+                  <img src="assets/images/6.partners/living_wage.png" alt="Living Wage" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/norfolk_prohelp.png" type="image/png" />
-                  <img src="/assets/images/6.partners/norfolk_prohelp.png" alt="Norfolk Prohelp logo" />
+                  <source srcset="assets/images/6.partners/norfolk_prohelp.png" type="image/png" />
+                  <img src="assets/images/6.partners/norfolk_prohelp.png" alt="Norfolk Prohelp logo" />
                 </picture>
               </div>
             </div>
             <div>
               <div class="partners-slide-item">
                 <picture>
-                  <source srcset="/assets/images/6.partners/investing-in-future-growth.jpg" type="image/jpg" />
-                  <img src="/assets/images/6.partners/investing-in-future-growth.jpg" alt="Investing In Future Growth" />
+                  <source srcset="assets/images/6.partners/investing-in-future-growth.jpg" type="image/jpg" />
+                  <img src="assets/images/6.partners/investing-in-future-growth.jpg" alt="Investing In Future Growth" />
                 </picture>
               </div>
             </div>
@@ -822,9 +822,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.png" type="image/png" />
-              <img src="/assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.png" type="image/png" />
+              <img src="assets/images/9.clients/ashcroftlogo_landscape_goldblack_DP60P-small.png" alt="Ashcroft Logo" />
             </picture>
           </div>
           <!-- End of client_item 1 -->
@@ -841,9 +841,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/onetravellerlogo_white_figuire.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/onetravellerlogo_white_figuire.png" type="image/png" />
-              <img src="/assets/images/9.clients/onetravellerlogo_white_figuire.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/onetravellerlogo_white_figuire.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/onetravellerlogo_white_figuire.png" type="image/png" />
+              <img src="assets/images/9.clients/onetravellerlogo_white_figuire.png" alt="One Traveller Logo" />
             </picture>
           </div>
           <!-- End of client_item 2 -->
@@ -860,9 +860,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/searles_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/searles_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/searles_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/searles_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/searles_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/searles_logo.png" alt="Searles Logo" />
             </picture>
           </div>
           <!-- End of client_item 3 -->
@@ -876,9 +876,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/busseys_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/busseys_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/busseys_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/busseys_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/busseys_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/busseys_logo.png" alt="Busseys Logo" />
             </picture>
           </div>
           <!-- End of client_item 4 -->
@@ -891,9 +891,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/crane_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/crane_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/crane_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/crane_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/crane_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/crane_logo.png" alt="Crane Logo" />
             </picture>
           </div>
           <!-- End of client_item 5 -->
@@ -910,9 +910,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/black_swan_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/black_swan_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/black_swan_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/black_swan_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/black_swan_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/black_swan_logo.png" alt="Black Swan Logo" />
             </picture>
           </div>
           <!-- End of client_item 6 -->
@@ -926,9 +926,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/xupes_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/xupes_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/xupes_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/xupes_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/xupes_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/xupes_logo.png" alt="Xupes Logo" />
             </picture>
           </div>
           <!-- End of client_item 7 -->
@@ -942,9 +942,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/beat_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/beat_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/beat_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/beat_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/beat_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/beat_logo.png" alt="Beat Logo" />
             </picture>
           </div>
           <!-- End of client_item 8 -->
@@ -958,9 +958,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/survey_solutions_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/survey_solutions_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/survey_solutions_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/survey_solutions_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/survey_solutions_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/survey_solutions_logo.png" alt="Survey Solutions Logo" />
             </picture>
           </div>
           <!-- End of client_item 9 -->
@@ -977,9 +977,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/girl_guides_anglia_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/girl_guides_anglia_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/girl_guides_anglia_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/girl_guides_anglia_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/girl_guides_anglia_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/girl_guides_anglia_logo.png" alt="Girls Guide Anglia Logo" />
             </picture>
           </div>
           <!-- End of client_item 10 -->
@@ -996,9 +996,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/sweetzy_logo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/sweetzy_logo.png" type="image/png" />
-              <img src="/assets/images/9.clients/sweetzy_logo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/sweetzy_logo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/sweetzy_logo.png" type="image/png" />
+              <img src="assets/images/9.clients/sweetzy_logo.png" alt="Sweetzy Logo" />
             </picture>
           </div>
           <!-- End of client_item 11 -->
@@ -1012,9 +1012,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/howespercivallogo.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/howespercivallogo.png" type="image/png" />
-              <img src="/assets/images/9.clients/howespercivallogo.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/howespercivallogo.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/howespercivallogo.png" type="image/png" />
+              <img src="assets/images/9.clients/howespercivallogo.png" alt="Howes Percival Logo" />
             </picture>
           </div>
           <!-- End of client_item 12 -->
@@ -1031,9 +1031,9 @@
               </div>
             </div>
             <picture>
-              <source srcset="/assets/images/9.clients/girls_day_school_trust_logob.webp" type="image/webp" />
-              <source srcset="/assets/images/9.clients/girls_day_school_trust_logob.png" type="image/png" />
-              <img src="/assets/images/9.clients/girls_day_school_trust_logob.png" alt="Ashcroft Logo" />
+              <source srcset="assets/images/9.clients/girls_day_school_trust_logob.webp" type="image/webp" />
+              <source srcset="assets/images/9.clients/girls_day_school_trust_logob.png" type="image/png" />
+              <img src="assets/images/9.clients/girls_day_school_trust_logob.png" alt="GDST Logo" />
             </picture>
           </div>
           <!-- End of client_item 13 -->
