working on the banner, just finished adding all the html and button colours

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <style></style>
   </head>
@@ -402,7 +404,10 @@
           <div class="container">
             <div class="banner-item-content">
               <h1>The East Of England's Leading Technology Company</h1>
-              <p>Performance-driven digital and technology services with complete transparency.</p>
+              <p>
+                Performance-driven digital and technology services <br />
+                with complete transparency.
+              </p>
               <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-1">
                 Why Choose Us? &nbsp;
                 <span class="icon__banner--right-arrow"></span>
@@ -412,6 +417,181 @@
           </div>
         </div>
         <!-- End of banner item 1 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-O67Y.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-O67Y.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-O67Y.png"
+                class=""
+                alt="Bespoke Software Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>Bespoke Software</h1>
+              <p>
+                Delivering expert bespoke software <br />
+                solutions across a range of industries.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-2">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 2 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-gay8.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-gay8.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-gay8.png"
+                class=""
+                alt="IT Support Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>IT Support</h1>
+              <p>
+                Fast and cost-effective IT support <br />
+                services for your business.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-3">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 3 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-6yTp.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-6yTp.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-6yTp.png"
+                class=""
+                alt="Digital Marketing Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>Digital Marketing</h1>
+              <p>
+                Generating your new business through <br />
+                results-driven marketing activities.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-4">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 4 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-J8Xx.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-J8Xx.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-J8Xx.png"
+                class=""
+                alt="
+                Telecoms Services Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>Telecoms Services</h1>
+              <p>
+                A new approach to connectivity, see <br />
+                how we can help your business.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-5">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 5 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-K0pn.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-K0pn.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-K0pn.png"
+                class=""
+                alt="Web Design Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>Web Design</h1>
+              <p>
+                For businesses looking to make a strong <br />
+                and effective first impression.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-6">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 6 -->
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-MSxH.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-MSxH.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-MSxH.png"
+                class=""
+                alt="Cyber Security Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>Cyber Security</h1>
+              <p>
+                Keeping businesses and their customers <br />
+                sensitive information protected.
+              </p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-7">
+                Find Out More &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 7 -->
       </div>
       <!-- End of banner div -->
       <div class="container">
@@ -1224,5 +1404,6 @@
       </div>
     </div>
     <!-- End of id container div -->
+    <script src="js/banner.js"></script>
   </body>
 </html>
