created the sidebar menu desktop html and styling

--- a/index.html
+++ b/index.html
@@ -1408,5 +1408,71 @@
     </div>
     <!-- End of id container div -->
     <script src="js/banner.js"></script>
+    <!-- sidebar test code start-->
+    <div class="sidebar">
+      <ul>
+        <li>
+          <a href="https://www.netmatters.co.uk/bespoke-software">Services</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/bespoke-software">Bespoke Software</a></li>
+            <li><a href="https://www.netmatters.co.uk/it-support">IT Support</a></li>
+            <li><a href="https://www.netmatters.co.uk/digital-marketing">Digital Marketing</a></li>
+            <li><a href="https://www.netmatters.co.uk/telecoms-services">Telecoms Services</a></li>
+            <li><a href="https://www.netmatters.co.uk/web-design">Web Design</a></li>
+            <li><a href="https://www.netmatters.co.uk/cyber-security">Cyber Security</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.netmatters.co.uk/case-studies">Our Work</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/case-studies">Case Studies</a></li>
+            <li><a href="https://www.netmatters.co.uk/case-studies/digital-marketing">Our Digital Marketing Clients</a></li>
+            <li><a href="https://www.netmatters.co.uk/case-studies/web-design">Our Website Clients</a></li>
+            <li><a href="https://www.netmatters.co.uk/our-it-clients">Our IT Clients</a></li>
+            <li><a href="https://www.netmatters.co.uk/case-studies/bespoke-software">Our Bespoke Software Clients</a></li>
+            <li><a href="https://www.netmatters.co.uk/case-studies/telecoms-services">Our Telecoms Clients</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.netmatters.co.uk/technologies">Our Knowledge</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/technologies">Technologies</a></li>
+            <li><a href="https://www.netmatters.co.uk/industries">Industries</a></li>
+            <li><a href="https://www.netmatters.co.uk/articles">News</a></li>
+            <li><a href="https://www.netmatters.co.uk/insights">Insights</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech">Training</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/train-for-a-career-in-tech">Train For A Career In Tech</a></li>
+            <li><a href="https://www.netmatters.co.uk/skills-bootcamp">Skills Bootcamp</a></li>
+            <li><a href="https://www.netmatters.co.uk/train-for-a-career-in-tech/scion-scheme-frequently-asked-questions">SCS Frequently Asked Questions</a></li>
+            <li><a href="https://www.netmatters.co.uk/train-for-a-career-in-tech/scion-collaborators">Scion Collaborators</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.netmatters.co.uk/our-culture">Our Company</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/why-choose-us">Why Choose Us?</a></li>
+            <li><a href="https://www.netmatters.co.uk/our-culture">Our Culture</a></li>
+            <li><a href="https://www.netmatters.co.uk/team">Our Team</a></li>
+            <li><a href="https://www.netmatters.co.uk/our-careers">Our Careers</a></li>
+            <li><a href="https://www.netmatters.co.uk/our-benefits">Our Benefits</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="https://www.netmatters.co.uk/contact-us">Contact Us</a>
+          <ul class="sidebar-submenu">
+            <li><a href="https://www.netmatters.co.uk/cambridge-office">Cambridge Office</a></li>
+            <li><a href="https://www.netmatters.co.uk/wymondham-office">Wymondham Office</a></li>
+            <li><a href="https://www.netmatters.co.uk/yarmouth-office">Great Yarmouth Office</a></li>
+          </ul>
+        </li>
+        <li><a href="https://www.netmatters.co.uk/covid-risk-assessments">COVID Risk Assessments</a></li>
+      </ul>
+    </div>
+
+    <!-- sidebar test code end -->
   </body>
 </html>
