some small changes before messing with the javascript for the sidebar

--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,8 @@
         <li><a href="https://www.netmatters.co.uk/covid-risk-assessments">COVID Risk Assessments</a></li>
       </ul>
     </div>
-
     <!-- sidebar test code end -->
+
+    <script src="js/sidebar.js"></script>
   </body>
 </html>
